--- a/source/parallax.haml
+++ b/source/parallax.haml
@@ -1,97 +1,7 @@
-%nav.white{:role => "navigation"}
-  .nav-wrapper.container
-    =link_to 'NextBuild', '#', class: 'logo-container brand-logo'
-    %ul.right.hide-on-med-and-down
-      - %w(About News Location Contact Register).each do |item|
-        %li= link_to item, '#'
-    %ul#nav-mobile.side-nav
-      %li
-        %a{:href => "#"} Navbar Link
-
-    %a.button-collapse{"data-activates" => "nav-mobile", :href => "#"}
-      %i.mdi-navigation-menu
-
-#index-banner.parallax-container
-  .section.no-pad-bot
-    .container
-      %br
-      %br
-      %h1.header.center.teal-text.text-lighten-2 Software Development Conference
-      .row.center
-        %h5.header.col.s12.light Sat 30 May 2015
-      .row.center
-        =link_to 'Register Now', '#', class: 'download-button btn-large waves-effect waves-light teal lighten-1'
-      %br
-      %br
-  .parallax
-    =image_tag 'background1.jpg'
-
-.container
-  .section
-    / Icon Section
-    .row
-      - ['image-flash-on', 'social-group', 'action-settings'].each do |fig|
-        .col.s12.m4
-          .icon-block
-            %h2.center.brown-text
-              %i(class="mdi-#{fig}")
-            %h5.center= lorem.words 4
-            %p.light= lorem.paragraph
-
-.parallax-container.valign-wrapper
-  .section.no-pad-bot
-    .container
-      .row.center
-        %h5.header.col.s12.light= lorem.sentence
-  .parallax
-    =image_tag 'background3.jpg'
-
-.container
-  .section
-    .row
-      .col.s12.center
-        %h3
-          %i.mdi-content-send.brown-text
-        %h4 Contact Us
-        %p.left-align.light= lorem.paragraphs(2)
-
-.parallax-container.valign-wrapper
-  .section.no-pad-bot
-    .container
-      .row.center
-        %h5.header.col.s12.light= lorem.sentence
-  .parallax
-    =image_tag 'background2.jpg'
-
-%footer.page-footer.teal
-  .container
-    .row
-      .col.l6.s12
-        %h5.white-text Company Bio
-        %p.grey-text.text-lighten-4 We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.
-      .col.l3.s12
-        %h5.white-text Settings
-        %ul
-          %li
-            %a.white-text{:href => "#!"} Link 1
-          %li
-            %a.white-text{:href => "#!"} Link 2
-          %li
-            %a.white-text{:href => "#!"} Link 3
-          %li
-            %a.white-text{:href => "#!"} Link 4
-      .col.l3.s12
-        %h5.white-text Connect
-        %ul
-          %li
-            %a.white-text{:href => "#!"} Link 1
-          %li
-            %a.white-text{:href => "#!"} Link 2
-          %li
-            %a.white-text{:href => "#!"} Link 3
-          %li
-            %a.white-text{:href => "#!"} Link 4
-  .footer-copyright
-    .container
-      Made by
-      %a.brown-text.text-lighten-3{:href => "http://materializecss.com"} Materialize
+= partial 'parallax/nav'
+= partial 'parallax/banner'
+= partial 'parallax/features'
+= partial 'parallax/parallax', locals: { slogan: lorem.sentence, background: 3 }
+= partial 'parallax/contact_us'
+= partial 'parallax/parallax', locals: { slogan: lorem.sentence, background: 2 }
+= partial 'parallax/footer'
