--- a/source/layouts/layout.haml
+++ b/source/layouts/layout.haml
@@ -8,7 +8,7 @@
     %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
     %link{:href => "apple-touch-icon.png", :rel => "apple-touch-icon"}/
     / Place favicon.ico in the root directory
-    = stylesheet_link_tag 'main'
+    = stylesheet_link_tag current_page.data.css || 'main'
     = javascript_include_tag 'main'
   %body
     = yield
