--- a/source/stylesheets/demo/modules/_theme.scss
+++ b/source/stylesheets/demo/modules/_theme.scss
@@ -8,7 +8,7 @@
 
   .theme__toolbar {
     background: {
-      image: linear-gradient(rgba($dark-primary-color, 0.35), rgba($primary-color, 0.35)), url('http://lorempixel.com/420/240');
+      image: linear-gradient(rgba($dark-primary-color, 0.35), rgba($primary-color, 0.35)), url('http://lorempixel.com/g/420/240');
       repeat: no-repeat;
       color: $primary-color;
 
