Use sass-color-schemes

--- a/source/stylesheets/demo.scss
+++ b/source/stylesheets/demo.scss
@@ -1,6 +1,7 @@
 @import 'compass';
 @import 'compass/reset';
 @import 'materialize';
+@import 'sass-color-schemes';
 
 @import './demo/variables';
 @import './demo/base';
