Use scs-test mixin

--- a/source/stylesheets/demo/_variables.scss
+++ b/source/stylesheets/demo/_variables.scss
@@ -6,7 +6,7 @@
 
 $sass-color-schemes: (
   base-color:                  #2980B9,
-  scheme:                      'tetrad'
+  scheme:                      'monochromatic'
 );
 
 $color-primary-0:             nth(primary-colors(), 1);
