--- a/source/stylesheets/demo/_variables.scss
+++ b/source/stylesheets/demo/_variables.scss
@@ -35,7 +35,7 @@ $color-secondary-2-4:         nth(secondary-2-colors(), 5);
 
 
 
-$primary-color:               $color-primary-0;;
+$primary-color:               $color-primary-0;
 $dark-primary-color:          $color-primary-3;
 $light-primary-color:         $color-primary-1;
 
