--- a/source/stylesheets/demo/_variables.scss
+++ b/source/stylesheets/demo/_variables.scss
@@ -1,46 +1,11 @@
-// $primary-color:               #2196F3;
-// $dark-primary-color:          #1976D2;
-// $light-primary-color:         #BBDEFB;
+$primary-color:               #795548;
+$dark-primary-color:          #5D4037;
+$light-primary-color:         #D7CCC8;
+
+$accent-color:                #FF5722;
+
+// Other, non-color scheme related colors:
 //
-// $accent-color:                #FF5252;
-
-$sass-color-schemes: (
-  base-color:                  #2980B9,
-  scheme:                      'monochromatic'
-);
-
-$color-primary-0:             nth(primary-colors(), 1);
-$color-primary-1:             nth(primary-colors(), 2);
-$color-primary-2:             nth(primary-colors(), 3);
-$color-primary-3:             nth(primary-colors(), 4);
-$color-primary-4:             nth(primary-colors(), 5);
-
-$color-complement-0:          nth(complement-colors(), 1);
-$color-complement-1:          nth(complement-colors(), 2);
-$color-complement-2:          nth(complement-colors(), 3);
-$color-complement-3:          nth(complement-colors(), 4);
-$color-complement-4:          nth(complement-colors(), 5);
-
-$color-secondary-1-0:         nth(secondary-1-colors(), 1);
-$color-secondary-1-1:         nth(secondary-1-colors(), 2);
-$color-secondary-1-2:         nth(secondary-1-colors(), 3);
-$color-secondary-1-3:         nth(secondary-1-colors(), 4);
-$color-secondary-1-4:         nth(secondary-1-colors(), 5);
-
-$color-secondary-2-0:         nth(secondary-2-colors(), 1);
-$color-secondary-2-1:         nth(secondary-2-colors(), 2);
-$color-secondary-2-2:         nth(secondary-2-colors(), 3);
-$color-secondary-2-3:         nth(secondary-2-colors(), 4);
-$color-secondary-2-4:         nth(secondary-2-colors(), 5);
-
-
-
-$primary-color:               $color-primary-0;
-$dark-primary-color:          $color-primary-3;
-$light-primary-color:         $color-primary-1;
-
-$accent-color:                $color-complement-0;
-
 $text-color:                  white;
 $primary-text:                #212121;
 $secondary-text:              #727272;
