--- a/source/stylesheets/demo/modules/_body.scss
+++ b/source/stylesheets/demo/modules/_body.scss
@@ -21,5 +21,12 @@
       float: left;
       margin-right: 20px;
     }
+    .other {
+      span {
+        text-decoration: line-through;
+        font-style: italic;
+        color: $secondary-text;
+      }
+    }
   }
 }
